Update for Minecraft 1.19.2

--- a/src/forge/resources/META-INF/accesstransformer.cfg
+++ b/src/forge/resources/META-INF/accesstransformer.cfg
@@ -12,8 +12,8 @@ public net.minecraft.client.gui.screens.inventory.SignEditScreen f_99257_  #sign
 public net.minecraft.client.gui.screens.inventory.SignEditScreen f_99255_  #frame
 
 
-public net.minecraft.client.gui.screens.inventory.BookEditScreen m_98158_(Ljava/lang/String;)V #setCurrentPage
-public net.minecraft.client.gui.screens.inventory.BookEditScreen m_98191_()Ljava.lang.String; #getCurrentPage
+public net.minecraft.client.gui.screens.inventory.BookEditScreen m_98158_(Ljava/lang/String;)V #setCurrentPageText
+public net.minecraft.client.gui.screens.inventory.BookEditScreen m_98191_()Ljava/lang/String; #getCurrentPageText
 public net.minecraft.client.gui.screens.inventory.BookEditScreen f_98071_  #title
 public net.minecraft.client.gui.screens.inventory.BookEditScreen f_98067_ #isSigning
 public net.minecraft.client.gui.screens.inventory.BookEditScreen f_98072_ #pageEdit
