Support Minecraft 1.20.3 (Fabric Only)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx2G
 
 archives_base_name=CocoaInput
-mod_version=4.4.0-EXPERIMENTAL
+mod_version=4.4.1-EXPERIMENTAL
 maven_group=jp.axer.cocoainput
 
-minecraft_version=1.20.2
+minecraft_version=1.20.3
 
-fabric_loader_version=0.14.22
-forge_version=1.20.2-48.0.0
+fabric_loader_version=0.15.0
+# TODO Forge 1.20.3 # forge_version=1.20.2-48.0.0
