--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -47,5 +47,5 @@ side = "CLIENT"
 [[dependencies.cocoainput]]
 modId = "minecraft"
 mandatory = true
-versionRange = "1.20.2"
+versionRange = "[1.20.2,)"
 side = "CLIENT"
